--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "background_color": "#1084e0",
     "display": "standalone",
     "scope": "/index.html",
-    "start_url": "/index.html",
+    "start_url": "/",
     "icons": [
       {
         "src": "windows11/SmallTile.scale-100.png",
