--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,7 @@
     "theme_color": "#084aa8",
     "background_color": "#1084e0",
     "display": "standalone",
-    "scope": "/index.html",
-    "start_url": "/",
+    "start_url": "index.html",
     "icons": [
       {
         "src": "windows11/SmallTile.scale-100.png",
